--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <style name="Theme.HappyBirthday" parent="android:Theme.Material.Light.NoActionBar" />
+<!--    <style name="Theme.HappyBirthday.SplashScreen" parent="Theme.SplashScreen"></style>-->
 </resources>
